--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   dio: ^5.6.0
   provider: ^6.1.2
   google_fonts: ^6.2.1
+  fluttertoast: ^8.2.5
 
 dev_dependencies:
   flutter_test:
